Issue #30 : New machinism for loading Like when page loads or tab changes to minimise the jumping effect. Now a loading throbber appears, instead of hiding/showing. For chrome and about urls, a question mark icon is shown

--- a/chrome/skin/toolbar.css
+++ b/chrome/skin/toolbar.css
@@ -49,8 +49,13 @@ toolbarbutton.facebook-toolbar-button[disabled=true] {
   list-style-image: url('chrome://facebook/skin/toolbar-disabled.png');
 }
 
-#facebook-login-status[status="waiting"] {
-  list-style-image: url('chrome://facebook/skin/throbber.gif');
+#facebook-login-status[status="waiting"],
+#facebook-like-loading {
+  list-style-image: url('chrome://facebook/skin/images/throbber.gif');
+}
+
+#facebook-like-noload {
+  list-style-image: url('chrome://facebook/skin/images/t_small.jpg');
 }
 
 .facebook-friendlinks toolbarbutton {
